@@ -104,6 +104,7 @@ my $builder = $class->new(
         'npg_qc::autoqc::qc_store::options'            => '0',
         'npg_qc::autoqc::role::rpt_key'                => '0',
         'npg_qc::autoqc::results::collection'          => '0',
+        'npg_qc::autoqc::checks::check'                => '0',
    },
 
    'build_requires'    => {
